Bug 496648 - Failed printing causes a crash
Summary: Failed printing causes a crash
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.0.1
Platform: Other Other
: NOR crash
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-24 22:22 UTC by Robby Stephenson
Modified: 2024-12-01 22:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2024-11-24 22:22:37 UTC
From the email list:

I was able to get tellico to crash.  Printing from the main screen does nothing.  No printout but no crash either.  I tried generating a report first (Group view) and attempted to print that.  Tellico crashed. 

Also recorded at https://bugzilla.redhat.com/show_bug.cgi?id=2328561
Comment 1 Robby Stephenson 2024-11-24 22:29:16 UTC
Seems to be unique to Qt6 and potentially Qt 6.8?

 #5 QPrinter::resolution at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/printsupport/kernel/qprinter.cpp:1054
 #6 QWebEngineViewPrivate::didPrintPage at /usr/src/debug/qt6-qtwebengine-6.8.0-1.fc41.x86_64/src/webenginewidgets/api/qwebengineview.cpp:860
 #7 QWebEnginePagePrivate::didPrintPage at /usr/src/debug/qt6-qtwebengine-6.8.0-1.fc41.x86_64/src/core/api/qwebenginepage.cpp:542
 #8 operator() at /usr/src/debug/qt6-qtwebengine-6.8.0-1.fc41.x86_64/src/webenginewidgets/api/qwebengineview.cpp:1509
Comment 2 Robby Stephenson 2024-11-24 22:29:58 UTC
Also reported in https://retrace.fedoraproject.org/faf/reports/1070805/
Comment 3 Robby Stephenson 2024-11-29 01:52:11 UTC
Git commit 21a1c8f4dec76d4f35d74cfac19e5cee7c0c1bc2 by Robby Stephenson.
Committed on 29/11/2024 at 01:52.
Pushed by rstephenson into branch 'master'.

Don't delete the printer object until printing is completed
FIXED-IN: 4.0.2

M  +23   -5    src/reportdialog.cpp

https://invent.kde.org/office/tellico/-/commit/21a1c8f4dec76d4f35d74cfac19e5cee7c0c1bc2
Comment 4 Robby Stephenson 2024-12-01 22:03:09 UTC
Git commit 99c1d5bb86da8e4b7bf6f28bdd7966a58bada945 by Robby Stephenson.
Committed on 01/12/2024 at 22:03.
Pushed by rstephenson into branch '4.0'.

Don't delete the printer object until printing is completed
FIXED-IN: 4.0.2

M  +23   -5    src/reportdialog.cpp

https://invent.kde.org/office/tellico/-/commit/99c1d5bb86da8e4b7bf6f28bdd7966a58bada945