Don't delete the printer object until printing is completed

BUG: 496648
FIXED-IN: 4.0.2